--- a/app/src/main/res/drawable/rounded_tag_baground.xml
+++ b/app/src/main/res/drawable/rounded_tag_baground.xml
@@ -2,4 +2,4 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="6dp" />
-    <solid android:color="#E0E0E0" /> <stroke android:width="1dp" android:color="#CCCCCC" /> </shape>
+    <solid android:color="@color/BiruMuda" /> <stroke android:width="1dp" android:color="@color/BiruMuda" /> </shape>
