--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -57,15 +57,54 @@
             android:background="@color/white"
             android:padding="16dp">
 
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:fontFamily="@font/kurale_reguler"-->
-<!--                android:text="Selamat Datang, Pengurus Masjid!"-->
-<!--                android:textColor="@color/BiruTua"-->
-<!--                android:textSize="22sp"-->
-<!--                android:textStyle="bold" />-->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/error"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:padding="12dp"
+                app:cardBackgroundColor="#FFCAC4"
+                app:cardCornerRadius="8dp"
+                android:layout_marginBottom="16dp"
+                android:gravity="center_vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/ic_info"
+                        app:tint="#FF0600"
+                        android:layout_marginStart="8dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="Information"
+                        android:layout_marginEnd="8dp" />
+
+                    <TextView
+                        style="@style/TextAppearance.App.LabelMedium"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="12dp"
+                        android:text="Tidak dapat terhubung ke server. Mohon coba lagi nanti."
+                        android:textColor="@color/black"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <!--            <TextView-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginBottom="8dp"-->
+            <!--                android:fontFamily="@font/kurale_reguler"-->
+            <!--                android:text="Selamat Datang, Pengurus Masjid!"-->
+            <!--                android:textColor="@color/BiruTua"-->
+            <!--                android:textSize="22sp"-->
+            <!--                android:textStyle="bold" />-->
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -345,6 +384,7 @@
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
+
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
