--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -76,7 +76,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:text="Masjid Annur"
+            android:text="Masjid Unida"
             android:textColor="@android:color/black"
             android:fontFamily="@font/kurale_reguler"
             android:textSize="16sp"
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:text="annur.gmail.com"
+            android:text="tamirmasjid87.gmail.com"
             style="@style/TextAppearance.App.BodyMedium"
             android:textColor="@color/black"
             app:layout_constraintStart_toEndOf="@id/ivProfileImage"
