--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -28,16 +28,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <ImageView
-            android:id="@+id/ivNotification"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="36dp"
-            android:layout_marginBottom="16dp"
-            android:contentDescription="Notification"
-            android:src="@drawable/ic_notificatation"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+<!--        <ImageView-->
+<!--            android:id="@+id/ivNotification"-->
+<!--            android:layout_width="20dp"-->
+<!--            android:layout_height="20dp"-->
+<!--            android:layout_marginEnd="36dp"-->
+<!--            android:layout_marginBottom="16dp"-->
+<!--            android:contentDescription="Notification"-->
+<!--            android:src="@drawable/ic_notificatation"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent" />-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
